third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-stable/transmute-ref-dst-not-nocell.stderr
error[E0277]: the trait bound `Dst: zerocopy::Immutable` is not satisfied
  --> tests/ui-stable/transmute-ref-dst-not-nocell.rs:23:33
   |
23 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 the trait `zerocopy::Immutable` is not implemented for `Dst`
   |                                 required by a bound introduced by this call
   |
   = note: Consider adding `#[derive(Immutable)]` to `Dst`
   = help: the following other types implement trait `zerocopy::Immutable`:
             &T
             &mut T
             ()
             *const T
             *mut T
             AU16
             Box<T>
             F32<O>
           and $N others
note: required by a bound in `AssertDstIsImmutable`
  --> tests/ui-stable/transmute-ref-dst-not-nocell.rs:23:33
   |
23 | const DST_NOT_IMMUTABLE: &Dst = transmute_ref!(&AU16(0));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsImmutable`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
